Changed the Sections order, make additional changes to the Demographic and Academic Section (#40)
* Change the section order

* Review Demographic and Academic section

* Resolve comments

--- a/content/academics.html
+++ b/content/academics.html
@@ -9,20 +9,35 @@
   SE 380, etc.
   <br /><br />
   4A and 4B term average appear to be significantly higher among respondents. This can be
-  due to several reasons; starting in 4th year SE students are able to pick 3-4 elective per term, 
+  due to several reasons; starting in 4th year SE students are able to pick 3-4 electives per term, 
   it may as well be the result of the transition to an online delivery for courses or because only 19
-  respondents disclosed their average in their 4B term.
-  <!-- Note that 4B we don't have lots of data points,
-  That Median are not really representative
-  1A: 86.4
-  1B: 81.3
-  2A: 84.8
-  2B: 82.2
-  3A: 87.8
-  3B: 83.1
-  4A: 89.6
-  4B: 90.6
-  -->
+  respondents disclosed their 4B term average.
+  <br /><br />
+  Note that this data may not be necessarily representative of the class. You can find the official median
+  for each term here:
+  <table>
+    <caption><b>Official Median</b></caption>
+    <tr>
+      <td>1A</td>
+      <td>1B</td>
+      <td>2A</td>
+      <td>2B</td>
+      <td>3A</td>
+      <td>3B</td>
+      <td>4A</td>
+      <td>4B</td>
+    </tr>
+    <tr>
+      <td>86.4</td>
+      <td>81.3</td>
+      <td>84.8</td>
+      <td>82.2</td>
+      <td>87.8</td>
+      <td>83.1</td>
+      <td>89.6</td>
+      <td>90.6</td>
+    </tr>
+  </table>
 </p>
 <div class="half second">
   <span class="graph-title">Grades from 1A to 4A </span>
@@ -33,10 +48,11 @@
 <h3> Attendance </h3>
 <p class="half">
 <span class="big">
-  Attendance consistently drops term by term, except after 3B
+  Attendance consistently drops term by term, except after 3B.
 </span>
-  This could be because students enjoyed their 4A & 4B classes more, or maybe students
-  enjoyed attending courses asynchronously.
+  This could be because respondents enjoyed their 4A & 4B classes more as they get
+  to select almost all of their classes, or possibly because respondents
+  preferred attending courses asynchronously.
 </p>
 <div class="half second">
   <span class="graph-title">Attendance</span>
@@ -65,9 +81,11 @@
   <span class="big">
   2 respondents completed an option.
   </span>
-  Graduating with an Option can be complicated to do in Engineering. With a restrictive amount of electives,
-  most students require to either overload a term or terms, or complete courses over coop in order to meet
+  Graduating with an Option can be complicated to do in Engineering. With a restrictive amount of elective slots,
+  most students will need to either overload a term (or multiple terms), or complete courses over coop in order to meet
   all the requirements for the Option and for graduating in SE.
+  <br></br>
+  You can find a list of all enrichment opportunities avaible to SE <a href="https://uwaterloo.ca/software-engineering/undergraduate-students/enrichment-opportunities">here</a>.
 </p>
 <div class="half second">
   <span class="graph-title"> Type of Options </span>
@@ -80,7 +98,7 @@
 <h3>Transferred From</h3>
 <p class="half">
   <span class="big">
-  Some students joined the class later in their degree. Among respondents, all students who transferred in the
+  Some students joined the class later into their degree. Among transferred students, all respondents who transferred in the
   class came from engineering.
   </span>
   Computer Science students do not appear to be interested in transferring into the class. Some possible explanations is
@@ -97,7 +115,7 @@
 <h3>Favourite Professors</h3>
 <p class="half">
   <span class="big">
-  The most favourite professor with 14% of the votes is Martin Pei.
+  The most favourited professor with 14% of the votes is Martin Pei.
   </span>
   For this section, students were only able to select one professor among all the
   professors they had during their academic career.
@@ -125,7 +143,7 @@
   <!-- Although 3B was the most difficult term, it had Concurrency (CS343), the most popular course. -->
 </span>
   The top favourited courses were all taken between 2B and 3B, this can either be because
-  students don't remember much of their first and second year courses, or that students
+  students don't remember much of their first 3 terms' courses, or that students
   enjoyed more higher level courses.
 </p>
 <div class="half second">
@@ -138,17 +156,16 @@
   <span class="big">
     <a href="https://uwflow.com/course/se463" target="_blank">SE 463 (Software Requirements Specification and Analysis)</a>, 
     <a href="https://uwflow.com/course/ece106" target="_blank">ECE 106 (Electricity and Magnetism)</a>
-    and <a href="https://uwflow.com/course/se380" target="_blank">SE 380 (Introduction to Feedback Control)</a> were the most disliked courses.
+    and <a href="https://uwflow.com/course/se380" target="_blank">SE 380 (Introduction to Feedback Control)</a> were the most disliked core courses.
   </span>
-  Some Linkage Electives were also not liked among the class such as (SMF 101, SPCOMM 100, SPCOMM 223)
-  <!-- Although SE 463 is just as disfavoured, it was a much easier course, which explains why 4A
-  was an easier term. -->
-  <!-- It's important to note that courses that were disliked do not imply that
+  Some Linkage Electives were also not liked among the class such as SMF 101, SPCOMM 100, SPCOMM 223.
+  <br></br>
+  It's important to note that courses that were disliked do not imply that
   students find the content useless. Instead, there are a variety of factors
-  such as personal interests, final grades, and assignments. For example, Logic and
-  Computation (SE 212) is considered useful by 88% of students
-  <a href="https://uwflow.com/course/se212" target="_blank">
-    according to UWFlow.</a> -->
+  such as personal interests, final grades, and workload. For example, Operating Systems (SE 350) 
+  is considered useful by 96% of students
+  <a href="https://uwflow.com/course/se350" target="_blank">
+    according to UWFlow.</a>
 </p>
 <div class="half">
   <span class="graph-title">Least favourite mandatory courses</span>
@@ -194,7 +211,8 @@
 <h3>Overloading & Academic Terms</h3>
 <p class="half">
   <span class="big">
-  28 respondents overloaded at some point during their academic degree.
+  Overloading is popular among the class with 28 respondents (53%) overloading
+  at some point during their academic degree.
   </span>
   The 4A and 3A terms are the most popular term to overload. The SE curriculum encourages
   students to overload in their 4A term to have a lighter term in 4B, which can be busy
@@ -224,14 +242,11 @@
 <h3>Pre-Covid</h3>
 <p class="half">
   <span class="big">
-  The preferred residences in first year was V1 and UWP (not CMH). From first year on, Lester was the most popular
+  The preferred residences in first year was V1 and UWP. From first year on, Lester was the most popular
   street to live on in Waterloo.
-  <!-- Students come from many different ethnic backgrounds  -->
-  <!--, which span 27 different countries. -->
   </span>
-  The likely popularity of Lester street is how close it is to Campus. 
-  <!-- There was a significant number of students Caucasians, and East
-  Asians, although it is interesting to note that most Women were East Asian. -->
+  The likely popularity of Lester street is probably due to how close it is to Campus. 
+  Note that CMH opened to students in the class's 2A term.
 </p>
 <div class="half second">
   <span class="graph-title">Students' location pre COVID</span>
@@ -251,15 +266,11 @@
 <h3>Post-Covid</h3>
 <p class="half">
   <span class="big">
-  When COVID hit most people decided to stay in Waterloo in their 4A term.
-  <!-- Students come from many different ethnic backgrounds  -->
-  <!--, which span 27 different countries. -->
+  When COVID hit, most respondents still decided to move back to Waterloo in their 4A term.
   </span>
   Students likely were hoping that measures would loosen over the summer or to occupy
-  student housing rented for the year.
+  student housing already rented for the year.
   However, in 4B, most students decided to move back home.
-  <!-- There was a significant number of students Caucasians, and East
-  Asians, although it is interesting to note that most Women were East Asian. -->
 </p>
 <div class="half second">
   <span class="graph-title">Students' location post COVID</span>
@@ -308,10 +319,10 @@
   <span class="big">
   Enriched Programs did not appear to benefit students academically, even in first year.
   </span>
-  On average, students who took part in an enriched program performed worse in first year than students who
+  On average, respondents who took part in an Enriched Program performed worse in first year than students who
   did not take part in an enriched program. To be clear, this does not suggest that doing an Enriched Program is not
-  beneficial. Instead, it suggests that it is possible to achieve good grades without
-  taking part in an Enriched Program.
+  beneficial to students, instead, it suggests that Enriched Program do not give an evident advantage in comparison
+  to students who did not take part in such programs in High School.
 </p>
 <div class="half second">
   <span class="graph-title">Enriched Programs compared to grades</span>
@@ -324,13 +335,33 @@
   </div>
 </div>
 
+<h3> Entrance Average </h3>
+<p class="half">
+  <span class="big">
+  Respondents who had an entrance average of 95%+ appear to perform better than respondents who had a
+  lower entrance average.
+  </span>
+  This could imply that students who have a 95%+ entrance average are slightly stronger students academically.
+  Regardless of grades, all respondents were in at least Good standing by the time they graduated.
+</p>
+<div class="half second">
+  <span class="graph-title">High School grades compared to University grades</span>
+  <div id="entrance-grades"></div>
+
+  <div class="scale">
+    <span class="legend">Cumulative Average:</span>
+    <div class="entrance-grades-item c1 pressed">Overall</div>
+    <div class="entrance-grades-item c2">First Year</div>
+  </div>
+</div>
+
 <h3> Sleep </h3>
 <p class="half">
   <span class="big">
   On average, students performed slighlty better if they slept less.
   </span>
   Note that all respondents slept at least 5 hours. Although there seems to be some correlation between sleep
-  and grade, this does not necessarily mean that one causes the other.
+  and grades, this does not necessarily mean that one causes the other.
 </p>
 <div class="half second">
   <span class="graph-title">Hours of Sleep compared to grades</span>
