--- a/content/background.html
+++ b/content/background.html
@@ -2,7 +2,7 @@
 <h3> Gender </h3>
 <p class="half">
   <span class="big">
-  Women make up 21% of students, which is less than the percent of women in tech (25%).
+  Women make up 21% of respondents and students in the class, which is less than the percent of women in tech (<a href="https://builtin.com/women-tech/women-in-tech-workplace-statistics">25%</a>).
   </span>
   The class saw a 3% increase in women representation from 1A to 4B, in first year, 
   18% of the class were female.
@@ -10,9 +10,9 @@
   There are many on-campus communities that supports the success of women in
   computer science and engineering at UWaterloo. For example,
   <a href="https://sesoc.uwaterloo.ca/wise">Women in Software (WiSE)</a>,
-  <a href="http://wics.uwaterloo.ca/about/">Women in Computer Science (WiCS)</a>,
+  <a href="http://wics.uwaterloo.ca/">Women in Computer Science (WiCS)</a>,
   <a href="https://uwaterloo.ca/women-in-engineering/">Women in Engineering (WiE)</a>, and
-  <a href="https://www.meetup.com/en-AU/Women-Who-Code-Waterloo/"> Women Who Code Waterloo </a>.
+  <a href="https://www.meetup.com/en-AU/Women-Who-Code-Waterloo/"> Women Who Code Waterloo</a>.
 </p>
 <div class="half second">
   <span class="graph-title">Gender proportion in class</span>
@@ -38,8 +38,16 @@
   <span class="big">
   Students come from many different ethnic backgrounds. 
   </span>
-  There was a significant number of students Caucasians, and East
-  Asians, although it is interesting to note that most women were East Asian.
+  There is a significant number of respondents who identify as Caucasian or East Asian
+  Asians. There is also more ethnic diversity among men than among women respondents, 
+  whereas most women respondents are East Asian.
+  <br /> <br />
+  There are many on-campus communities that support ethnic minorities on campus
+  such as
+  <a href="https://www.facebook.com/nsbe.waterloo/">National Society of Black Engineers (NSBE)</a>,
+  <a href="http://uwasa.uwaterloo.ca/">UW African Students Association (UWASA)</a>, 
+  <a href="https://www.facebook.com/groups/indonesianstudents/">UW Indonesian Students Association</a>, and
+  <a href="https://www.facebook.com/uwbase/"> UW Black Association for Student Expression (UW BASE)</a>.
 </p>
 <div class="half second">
   <span class="graph-title">Students' ethnicities</span>
@@ -64,6 +72,11 @@
   At least 6.9% of respondents are part of the LGBTQ+ community.
   </span>
   4 students preferred not to disclose.
+  <br /> <br />
+  There are many on-campus communities that supports LGBTQ+ community
+  such as
+  <a href="https://uwaterloo.ca/engineering/events/engiqueers">Engiqueers</a>, and
+  <a href="https://wusa.ca/services/glow-centre-sexual-and-gender-diversity"> Glow</a>.
 </p>
 <div class="half second">
   <span class="graph-title">Students' Sexual Orientation</span>
@@ -76,7 +89,7 @@
 <p class="half">
   <span class="big">
   8.4% of respondents are international students, however, according to the official headcount
-  12.9% of the students in the class are international.
+  12.9% of the students in the class are international students.
   </span>
   The class saw a 2.1% decrease in international students from 1A (15%) to 4B.
   This could be due to the higher tuition costs for international students, especially in Engineering.
@@ -94,18 +107,17 @@
 <h3>Immigrated to Canada</h3>
 <p class="full">
   <span class="big">
-  35.7% of students, or 39% of domestic students immigrated to Canada.
+  35.7% of all respondents, and 39% of respondents who are domestic students, immigrated to Canada.
   </span>
   Immigrated students are any students who are considered domestic students and <a href="https://uwaterloo.ca/graduate-studies-academic-calendar/general-information-and-regulations/fee-schedule-and-tuition-assessment-information" target="_blank">do not pay
   as a result international tuition</a>, and among others are naturalized citizens or are Permanent Residents of Canada.
-  Immigrated students came from countries including Belgium, China, England and India.
+  Immigrated students came from countries such as Belgium, China, England and India.
 </p>
 <div class="vb"></div>
 <div class="half">
   <span class="graph-title">Students Immigrated to Canada?</span>
   <div id="immigrated"></div>
 </div>
-<!-- I don't think this graph is needed as I mention where immigrated student came from. -->
 <div class="half second">
   <span class="graph-title">Students Immigrated to Canada from...</span>
   <div id="emigrated"></div>
@@ -114,7 +126,7 @@
 <h3>Home Location</h3>
 <p class="half">
   <span class="big">
-  65.3% of students came from Ontario, 43% came from GTA/Toronto area specifically.
+  65.3% of respondents came from Ontario, of which 66% came from the GTA/Toronto area specifically.
   </span>
   In Canada, students also came from other provinces such as Alberta, Britich Columbia, New Brunswick and Quebec.
 </p>
@@ -163,8 +175,8 @@
 <h3> Income </h3>
 <p class="half">
   <span class="big">
-  More than half of students come from families whose income is higher than
-  the median Canadian family income ($76,000).
+  More than half of respondents come from families whose income is higher than
+  the median Canadian family income (<a href="https://www150.statcan.gc.ca/t1/tbl1/en/tv.action?pid=1110001201">$96,080</a>).
   </span>
   These numbers represent the income the students' family had prior to starting
   University. The majority of students have a family income between $50,000 and $200,000.
@@ -177,11 +189,11 @@
 <h3> Level of education </h3>
 <p class="half">
   <span class="big">
-  There are more parents with Masters and Doctorates combined than Bachelors.
+  There are more parents with Masters and Doctorates combined than those with Bachelors.
   </span>
-  Compared to our parents, only 3 students are planning on attending
+  Compared to our parents, only 3 respondents are planning on attending
   grad school. This could
-  be a generational shift, or maybe because entering the industry does not require
+  be a generational shift, or be because entering the software industry does not require
   a Master or Doctorate.
 </p>
 <div class="half second">
@@ -204,8 +216,6 @@
 
 <div class="vbx2"></div>
 <h2> High School, Enriched Programs & CEGEP </h2>
-
-<div class="vbx2"></div>
 
 <h3>Admission Average</h3>
 <p class="half">
@@ -256,7 +266,7 @@
   Mathematics, and Computer Science.
   </span>
   Unlike other universities, CEGEP students, enrolled in an Engineering program at Waterloo, cannot convert
-  any of their course taken in CEGEP into university credits, except for Calculus courses which can be counted as
+  any of their course taken in CEGEP into university credits, except for Calculus courses which can sometimes be counted as
   a credit toward Math 117 (Calculus 1 for Engineering).
 </p>
 <div class="half second">
