--- a/content/introduction.html
+++ b/content/introduction.html
@@ -33,11 +33,11 @@ transferred out, responded.
 <br /><br />
 
 Respondents who had transferred out of SE had completed at least
-2 years (4 study terms) in with SE2021 cohort.
+2 years (4 study terms) in the Software Engineering Program with the SE2021 cohort.
 <br /><br />
 
 An addendum survey was also sent out, where
-45 more responses were retrieved, likley from a subset of previous
+45 more responses were retrieved, likely from a subset of previous
 respondents.
 <br /><br />
 
@@ -74,56 +74,56 @@ future classes, as we did, in order to take future profiles to new heights.
 <h1 id="toc">Sections</h1>
 <div class="half">
   <ul class="toc">
-    <li>1 <a href="#coop">Co-op</a></li>
-    <li>
-      <p class="nested">
-        Companies, locations, salary, factors affecting salary
-      </p>
-    </li>
-    <li>2 <a href="#background">Demographic & Background</a></li>
+    <li>1 <a href="#background">Demographic & Background</a></li>
     <li>
       <p class="nested">
         Gender, ethnicity, high school, family
       </p>
     </li>
-    <li>3 <a href="#academics">Academics</a></li>
+    <li>2 <a href="#academics">Academics</a></li>
     <li>
       <p class="nested">
         Grades, attendance, courses, factors affecting grades
       </p>
     </li>
-    <li>4 <a href="#transfers">Transfers</a></li>
+    <li>3 <a href="#coop">Co-op</a></li>
     <li>
       <p class="nested">
-        Students who transferred out of SE
+        Companies, locations, salary, factors affecting salary
+      </p>
+    </li>
+    <li>4 <a href="#lifestyle">Lifestyle & Experiences</a></li>
+    <li>
+      <p class="nested">
+        Extracurriculars, travel, food
+      </p>
+    </li>
+    <li>5 <a href="#health">Health</a></li>
+    <li>
+      <p class="nested">
+        Exercise, physical health, mental health
+      </p>
+    </li>
+    <li>6 <a href="#relationships">Family and relationships</a></li>
+    <li>
+      <p class="nested">
+        Parents, friends, love life
       </p>
     </li>
   </ul>
 </div>
 <div class="half second">
   <ul class="toc">
-    <li>5 <a href="#outcome">Program outcome</a></li>
-    <li>
-      <p class="nested">
-        Rating, preferred program, paths
-      </p>
-    </li>
-    <li>6 <a href="#finances">Finances</a></li>
+    <li>7 <a href="#finances">Finances</a></li>
     <li>
       <p class="nested">
         Budgeting, investments, loans, expenses
       </p>
     </li>
-    <li>7 <a href="#health">Health</a></li>
+    <li>8 <a href="#exchange">Exchange</a></li>
     <li>
       <p class="nested">
-        Exercise, physical health, mental health
-      </p>
-    </li>
-    <li>8 <a href="#lifestyle">Lifestyle & Experiences</a></li>
-    <li>
-      <p class="nested">
-        Extracurriculars, travel, food
+        Decision-making, experience
       </p>
     </li>
     <li>9 <a href="#misc">Miscellaneous</a></li>
@@ -132,22 +132,22 @@ future classes, as we did, in order to take future profiles to new heights.
         Reddit usage, academic burnout, conflicts, 
       </p>
     </li>
-    <li>10 <a href="#future">Future</a></li>
+    <li>10 <a href="#transfers">Transfers</a></li>
+    <li>
+      <p class="nested">
+        Students who transferred out of SE
+      </p>
+    </li>
+    <li>11 <a href="#outcome">Program outcome</a></li>
+    <li>
+      <p class="nested">
+        Rating, preferred program, paths
+      </p>
+    </li>
+    <li>12 <a href="#future">Future</a></li>
     <li>
       <p class="nested">
         Post-graduation plans, Compensation
-      </p>
-    </li>
-    <li>11 <a href="#relationships">Family and relationships</a></li>
-    <li>
-      <p class="nested">
-        Parents, friends, love life
-      </p>
-    </li>
-    <li>12 <a href="#exchange">Exchange</a></li>
-    <li>
-      <p class="nested">
-        Decision-making, experience
       </p>
     </li>
   </ul>
