chore: remove unused images (#44)
* rename hero -> cover

- includes bg-hero -> bg-cover class and html file

* remove outcome stories (from previous years) and images

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 ---
 layout: main
 ---
-<section class="bg-hero">
+<section class="bg-cover">
     <div class="content">
-        {% include_relative content/hero.html %}
+        {% include_relative content/cover.html %}
     </div>
 </section>
 <section class="bg-3">
